--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.9",
+    "@reduxjs/toolkit": "^1.8.6",
+    "firebase": "^9.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
